--- a/web/src/components/FiveAcrossWinnersCard/FiveAcrossWinnersCard.module.scss
+++ b/web/src/components/FiveAcrossWinnersCard/FiveAcrossWinnersCard.module.scss
@@ -3,7 +3,7 @@
 .header-border {
   width: 100%;
   // margin-bottom: 30px;
-  border: $brand-red-bright solid 1px;
+  border: $color-red-dark solid 1px;
   // font-weight: 300;
   
   .video-button {
@@ -19,7 +19,7 @@
     text-align: center;
     margin-top: -20px;
     font-weight: 300;
-    color: $brand-red-bright;
+    color: $color-red-dark;
     
   }
 
