--- a/web/src/styles/text.scss
+++ b/web/src/styles/text.scss
@@ -23,6 +23,14 @@
   color: $brand-color;
 }
 
+.text--bright-red {
+  color: $brand-red-bright;
+}
+
+.text--brightest-red {
+  color: $brand-red-brightest;
+}
+
 .link--red:hover {
   color: $brand-color;
 }
