--- a/web/src/styles/variables.scss
+++ b/web/src/styles/variables.scss
@@ -16,6 +16,7 @@ $brand-grey: #D1D2D4;
 $brand-grey-light: #E6E7E8;
 $brand-grey-lightest: #F1F1F2;
 $brand-red-bright: #ED3742;
+$brand-red-brightest: #F05B64;
 
 $black-color: #323333;
 $body-bg: #fff;
