added basic responsive font size, also fixed up the bootcamp responsiveness

--- a/web/src/pages/bootcamp/Components/shield.module.scss
+++ b/web/src/pages/bootcamp/Components/shield.module.scss
@@ -19,6 +19,7 @@
         text-align: center;
         justify-self: center;
         align-self: center;
+        white-space: pre-wrap;
         @include screen-tablet-max {
             @include font-size(12);
         }
