--- a/web/src/pages/bootcamp/Components/testimonial.module.scss
+++ b/web/src/pages/bootcamp/Components/testimonial.module.scss
@@ -4,22 +4,22 @@
 }
 
 .bootcampGradImages {
-    img {
-        width: 125px;
-        margin-bottom: 3rem;
-        border: 2px rgba(255, 255, 255, 0.8) solid;
-        &:last-child {
-          margin-bottom: 0;
-        }
-    }
+    // img {
+    //     width: 125px;
+    //     margin-bottom: 3rem;
+    //     border: 2px rgba(255, 255, 255, 0.8) solid;
+    //     &:last-child {
+    //       margin-bottom: 0;
+    //     }
+    // }
 }
 
 .testimonialWindow {
     background-color: rgba(255, 255, 255, 0.8);
-    max-width: 75%;
+    // max-width: 75%;
     margin-top: 5px;
 
-    width: 708px;
+    // width: 708px;
     height: 424px;
 
     .testimonial-window-text {
