Update last change to course table

--- a/web/src/components/CourseTable/coursetable.module.scss
+++ b/web/src/components/CourseTable/coursetable.module.scss
@@ -57,10 +57,16 @@
     @include screen-sm{
         display: none;
     }
+    @include screen-xs{
+        display: none;
+    }
 }
 
 .subtitle{
     @include screen-lg{
+        display: none;
+    }
+    @include screen-md{
         display: none;
     }
 }
