Working on language section

--- a/web/src/components/UI/VerticalTitle/VerticalTitle.module.scss
+++ b/web/src/components/UI/VerticalTitle/VerticalTitle.module.scss
@@ -3,7 +3,8 @@
     margin-left: 15px;
     margin-top: 400px;
     color: #C12029 !important;
-    font-size: 4.5rem !important;
+    // font-size: 4.5rem !important;
+    font-size: 70px;
     letter-spacing: 4px;
     text-transform: none;
     
