--- a/web/src/pages/bootcamp/Components/shield.module.scss
+++ b/web/src/pages/bootcamp/Components/shield.module.scss
@@ -4,6 +4,16 @@
 // -----------------------------------------------------------------------------
 
 .shieldPanel {
+    // background-image: url(../../../images/bootcamp/shield.png);
+    // background-size: contain;
+    // background-repeat: no-repeat;
+    // background-position: center center;
+    // height: 220px;
+    // width: 100%;
+    // display: grid;
+    // grid-template-columns: auto;
+    // grid-template-rows: auto;
+
     background-image: url(../../../images/bootcamp/shield.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -11,14 +21,25 @@
     height: 220px;
     width: 100%;
     display: grid;
+    word-break:break-word;
+    text-align: center;
     grid-template-columns: auto;
     grid-template-rows: auto;
+    box-sizing: inherit;
+    
 
     .shieldText {
+        font-size: 15px;
+        color: white;
+        height: 100%;
+        width:fit-content;
         display: flex;
+        margin-top: 100px;;
         text-align: center;
         justify-self: center;
         align-self: center;
+        word-break: break-word;
+        
         @include screen-tablet-max {
             @include font-size(12);
         }
