--- a/web/src/pages/bootcamp/Components/sideNav.module.scss
+++ b/web/src/pages/bootcamp/Components/sideNav.module.scss
@@ -7,11 +7,14 @@
     background-color:whitesmoke;
     position: fixed;
     float: right !important;
-    margin-top: -115px;
-    margin-right: -50px;
-    margin-left: 117px;
+    // margin-top: -115px;
+    margin-top: -65px;
+    // margin-right: -50px;
+    // margin-left: 117px;
+    margin-left: 300px;
     z-index: 999;
     max-width: 250px;
+    // width: 250px;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
 
