--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -39,7 +39,26 @@
     .titleBlock {   
         color: white;
         text-align: right;
-        font-size: text--big;
+        @include screen-max{
+            margin-top: 5vh;
+        }
+        @include screen-lg{
+            margin-top: 5vh ;
+        }
+        @include screen-md{
+            // margin-top: 5vh ;
+          
+            margin-bottom: 170px;
+        }
+        @include screen-sm{
+            title{
+                font-size: small;
+            }
+        }
+        @include screen-xs{
+            
+        }
+       
 
      
 
@@ -52,6 +71,7 @@
     }
 }
 
+
 .bootcampUpcomingdates{
     @media (min-width: 768px){
         border-right: 2px solid #C12029;
@@ -59,31 +79,29 @@
 }
 
 .twoButtons{
-    background-color: light-gray;
-
+    background-color: #323232;
     .twoButtonsRow {
         padding-top: 50px;
         padding-bottom: 50px;
-       
-    
-    
+        margin-left: 20px;
+
         .leftButtonCol{
-            border-right: solid #C12029 ;
+            padding-right: 50px;
+            border-right: 1.75px solid white ;
             @include screen-sm{
               border-right: none;
+              padding-right: none;
             }
-            @include screen-md{
-                border-right: none;
-            }
-    
-            
         }
     
         .rightButtonCol{
-      
+            padding-left: 50px;
+            @include screen-sm{
+                padding-left:none;
+                padding-right: none;
+            }
             
         }
-
 }
 }
 
@@ -97,57 +115,52 @@
 
 
 .whyAwesomeinc {
-    .leftCol {
-        @media (min-width: 1201px){
-            text-align: justify;
-            width: 530px;
-            float: right;
+    p{
+        text-align: justify;
+    }
+    .leftCol{
+        @include screen-max{
+            max-width: 410px;
+        }
+        @include screen-lg{
             
         }
-        
-        @media (min-width: 992px) and (max-width:1200px){
-            text-align: justify;
-            width: 450px;
-            margin-left: -70px;
+        @include screen-md{
+            
         }
-        @media (min-width:768px) and (max-width: 991px){
-            width:350px;
-            margin-left: -70px;
+        @include screen-sm{
+            width: 80vw;
+            text-align: justify;
             p{
-                font-size: 16px;
+                font-size: 18px;
             }
-            
         }
-        @media (max-width: 767px){
-            // float: right;
-            margin-left: -50px;
-            max-width: 520px;
+        @include screen-xs{
             text-align: justify;
+            width: 90vw;
             p{
-                width: 75vw;
-                font-size: 0.75rem;
+                font-size: 18px;
             }
         }
 
     }
-
     .rightCol{
-        @media (min-width: 1201px){
-            
+        @include screen-max{
         }
-        @media (min-width: 992px) and (max-width:1200px){
-            
-        }
-        @media (min-width:768px) and (max-width: 991px){
-            margin-top: 50px;
-    
-        }
-        @media (max-width: 767px){
+        @include screen-lg{
             margin-top: 100px;
-
         }
-     
+        @include screen-md{
+            margin-top: 150px;
+        }
+        @include screen-sm{
+            margin-top: 50px;
+        }
+        @include screen-xs{
+           
+        }
     }
+  
 }
 
 
@@ -166,34 +179,20 @@
     .text-white {
         padding-top: 20px;
         padding-bottom: 30px;
-        max-width: 65%;
     }
+}
 
-    .textCol {
-        @media (max-width: 481px) {
-            width: max-content;
-        }
-    }
-
-    .jobGuaranteeText {
-        text-align: center;
-        width: 80vw;
-        font-size: 1rem;
-        margin-top: 30px;
-
-    @media (max-width: 480px) {
-        max-width: 170px;
-        width: 80vw;
-        font-size: 0.75rem;
-        margin-top: 30px;
-    }
+.carousel{
+    .aincuTestimonial{
+        display: inline-block;
+        padding: 10px;
+        box-shadow: rgba(0,0,0,0.23) 0px 1px 20px 0px ;
+        border-radius: 4px;
     }
 }
 
 .whyAwesomeIncHeader {
-    // background-image: url(../../images/bootcamp/awesome-inc-bg.jpg);
     background-image: url(https://www.awesomeinc.org/assets/img/bootcamp/awesome-inc-bg.jpg);
-    
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: 10%;
@@ -203,24 +202,19 @@
 .apply{
 
     .applyCol {
-
-        // @media (min-width:800px){
-        //     display: flex;
-        //     margin-left: auto;
-        //     margin-right: auto;
-        // }
+        @include screen-max{
+            display: flex;
+            margin-left: 0;
+            margin-right: 0;
+        }
         @include screen-lg{
             display: flex;
             margin-left: auto;
             margin-right: auto;
         }
-        // @media (max-width: 799px){
-        //     flex: none;
-        //     display: block;
-        //     margin-left: auto;
-        //     margin-right: auto;
-        //     width: 200px;
-        // }
+        @include screen-sm{
+            display: flex;
+        }
 
         @include screen-md{
             flex: none;
@@ -230,7 +224,6 @@
             width: 200px;
         }
 
-        
         @include screen-sm{
             flex: none;
             display: block;
@@ -239,7 +232,6 @@
             width: 200px;
         }
        
-
         @include screen-xs{
             flex: none;
             display: block;
@@ -261,70 +253,62 @@
         }
      
         }
-}
-
-
-
-
-.stats {
-    
-    .statsCol{
-        // margin-left: 100px;
-        @media (min-width: 1200px){
-            display: flex;
-            text-align: center;
-        }
-        @media (min-width: 770px) and (max-width:1199px){
-            // padding-left: 20px;
-            // padding-right: 20px;
-            display: flex;
-            text-align: center;
-            font-size: 1 rem;
-        }
-        @media (min-width: 770px) and (max-width:994px){
-            display: flex;
-            text-align: center;
-            font-size: 1 rem;
-        }
-        @media (max-width: 769px){
-            flex: none;
-            text-align: center;
-            font-size: 75%;
-        }
-    }
-    .statsRow {
-        @media (min-width: 1200px){
-            margin-left : 100px;
-            margin-right: 100px;
-        }
-
-        @media (min-width: 995px) and (max-width:1199px){
-            margin-left : 60px;
-            margin-right: 60px;
+    .applyButtons{
+        display: flex;
+        @include screen-max{
+           flex: none;
             
-        }
-
-        @media (min-width: 770px) and (max-width:994px){
-            margin-left : 30px;
-            margin-right: 30px;
-            
+        
         }
         
-        @media (max-width: 769px){
-          margin-left: auto;
-          margin-right: auto;
-        }
-    }
-    .button {
-        background-color: grey;
-    }
-    .img{
-        width: 50px;
     }
 }
 
-.employerImg {
-    max-width: 50px;
+.stats {
+    .statsCol{
+        @include screen-max{
+            display: flex;
+            text-align: center;
+        }
+        @include screen-lg{
+            display: flex;
+            text-align: center;
+        }
+        @include screen-md{
+            display: flex;
+            text-align: center;
+        }
+
+        @include screen-sm{
+            flex: none;
+            text-align: center;
+        }
+        @include screen-xs{
+            flex: none;
+            text-align: center;
+        }
+    }
+
+    .statsRow{
+        @include screen-max{
+            margin-left: 80px;
+            margin-right: 80px;
+        }
+        @include screen-lg{
+            margin-left: 80px;
+            margin-right: 80px;
+        }
+        @include screen-md{
+            margin-left: 50px;
+            margin-right: 50px;
+        }
+        @include screen-sm{
+            text-align: center;
+        }
+        @include screen-xs{
+            text-align: center;
+        }
+    }
 }
 
 .languages {
@@ -337,7 +321,14 @@
     padding-right: 100px;
     .languageIcons{
         justify-content: center;
-
+        @include screen-md{
+            flex-wrap: nowrap;
+            flex-shrink: 1;
+        }
+        @include screen-sm{
+            flex-wrap: nowrap;
+            flex-shrink: 2;
+        }
     }
 }
 
@@ -359,8 +350,6 @@
     }
   
     .timelineTitle {
-        // position: absolute; 
-        // top: 80%;
         left: 0;
         margin-left: 15px;
         margin-top: 400px;
@@ -405,11 +394,15 @@
         @include screen-sm{
             border-right: none;
         }
+        @include screen-xs{
+            border-right: none;
+        }
     }
 }
 .stillUnsure {
     background-image: url(../../images/bootcamp/alumni-bg.png);
     background-size: cover;
+
 }
 
 .questions {
