--- a/web/src/pages/bootcamp/Components/profileCard.module.scss
+++ b/web/src/pages/bootcamp/Components/profileCard.module.scss
@@ -1,73 +1,76 @@
+@import "../../../styles/mixins.scss";
+@import "../../../styles/variables.scss"; 
+
 .profileCard{
 
     .cardImg{
-        @media (min-width:1400px){
-            max-width: 150px;
-            border-radius: 50%;
-            margin-left: 200px;
-        }
-        
-        @media (min-width:1201px) and (max-width: 1399px){
-            width: 150px;
-            border-radius: 50%;
-            margin-left: 220px;
-        }
 
-        @media (min-width: 992px) and (max-width: 1200px){
+        @include  screen-max{
+            width: 120px;
+            border-radius: 50%;
+            margin-top: 30px;
+            // margin-left: 80px;
+
+        }
+        @include screen-lg{
             width: 150px;
             border-radius: 50%;
-            margin-left: 60px;
-            margin-top: 10px;
+            margin-left: 300px;
+        
         }
-        @media (min-width: 768px) and (max-width:992px){
-            max-width: 150px;
+        @include screen-md{
+            width: 150px;
             border-radius: 50%;
-            margin-left: 30px;
-            margin-top: 100px;
+            margin-left: 50px;
             
         }
-        @media (max-width:767px){
-            max-width: 150px;
+        @include screen-sm{
+            width: 150px;
             border-radius: 50%;
-            // margin-left: -120px;
-            margin-left: -20vw;
+            margin-left: -100px;
         }
+        
+        @include screen-xs{
+            width: 150px;
+            border-radius: 50%;
+            margin-left: -20px;
+        }
+    
 
     }
     .cardContainer{
-        @media (min-width:1400px){
-            width: 480px;
-            margin-top: -50px;
+        @include screen-max{
+            width: 360px;
             padding-top: 10px;
-            margin-left: 50px;
-        }
-        @media (min-width:1201px) and (max-width:1399px){
-            width: 480px;
             margin-top: -50px;
-            padding-top: 10px;
-            margin-left: 50px;
-         
-        }
-        @media (min-width: 992px) and (max-width: 1200px){
-            width: 400px;
-            margin-top: -50px;
-            padding-top: 10px;
-            margin-right: 100px;
-        }
-        @media (min-width: 768px) and (max-width:991px){
-            width: 300px;
-            padding-top: 50px;
-            margin-left: -50px;
-            margin-top: -90px;
+            // margin-right: 200px;
+
         }
 
-        @media (max-width: 767px) {
-            max-width: 300px;
-            padding-top: 50px;
-            margin-top: -90px;
+        @include screen-lg{
+            margin-top: -100px;
+            padding-top: 10px;
         }
-       
-           
+
+        @include screen-md{
+            width: 300px;
+            margin-top: -90px;
+            padding-top: -50px ;
+            margin-left: -8px;
+        }
+
+        @include screen-sm{
+            width: 300px;
+            padding-top: 20px;
+            margin-top: -80px;
+
+        }
+
+        @include screen-xs{
+            width: 300px;
+            padding-top: 20px;
+            margin-top: -80px;
+        }
     
     }
 }
