--- a/web/src/templates/blog/blog-template.module.scss
+++ b/web/src/templates/blog/blog-template.module.scss
@@ -6,7 +6,7 @@
     color: $brand-color !important;
     font-size: 1rem !important;
     @include screen-tablet-max {
-        font-size: .8rem !important;
+        font-size: 1rem !important;
     }
 }
 
